add options on services, session type
