# src/modules/awards/awards.controller.ts
@@ -31,32 +31,32 @@ export class AwardsController {
     return this.awardsService.findAll(query);
   }
 
-  @Get('/:id')
+  @Get('/:key')
   @ApiOperation({ summary: 'Получение награды по ID' })
   @ApiResponse({ status: HttpStatus.OK, description: 'Success', type: Award })
   @ApiResponse({ status: HttpStatus.UNAUTHORIZED, description: 'Unauthorized' })
   @ApiResponse({ status: HttpStatus.NOT_FOUND, description: 'Not Found' })
-  async findOneById(@Param('id') id: string): Promise<Award> {
-    return this.awardsService.findOne('_id', id);
+  async findOneById(@Param('key') key: string): Promise<Award> {
+    return this.awardsService.findOne('_id', key);
   }
 
   @UseGuards(AccessTokenGuard)
-  @Put('/:id')
+  @Put('/:key')
   @ApiOperation({ summary: 'Обновление награды по ID' })
   @ApiResponse({ status: HttpStatus.OK, description: 'Success', type: Award })
   @ApiResponse({ status: HttpStatus.UNAUTHORIZED, description: 'Unauthorized' })
   @ApiResponse({ status: HttpStatus.NOT_FOUND, description: 'Not Found' })
-  async updateOneById(@Param('id') id: string, @Body() updateDto: UpdateAwardDto): Promise<Award> {
-    return this.awardsService.updateOne('_id', id, updateDto);
+  async updateOneById(@Param('key') key: string, @Body() updateDto: UpdateAwardDto): Promise<Award> {
+    return this.awardsService.updateOne('_id', key, updateDto);
   }
 
   @UseGuards(AccessTokenGuard)
-  @Delete('/:id')
+  @Delete('/:key')
   @ApiOperation({ summary: 'Удаление награды по ID' })
   @ApiResponse({ status: HttpStatus.OK, description: 'Success', type: Award })
   @ApiResponse({ status: HttpStatus.UNAUTHORIZED, description: 'Unauthorized' })
   @ApiResponse({ status: HttpStatus.NOT_FOUND, description: 'Not Found' })
-  async deleteOneById(@Param('id') id: string): Promise<Award> {
-    return this.awardsService.deleteOne('_id', id);
+  async deleteOneById(@Param('key') key: string): Promise<Award> {
+    return this.awardsService.deleteOne('_id', key);
   }
 }
